<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signaler">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="484dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="11"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/emojisorry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/message_quel_pb"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:layout_marginLeft="20sp"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <RadioButton
                            android:id="@+id/buttonBruit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/pb_bruit"
                            android:textSize="17sp" />

                        <RadioButton
                            android:id="@+id/buttonAllume"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/pb_allume"
                            android:textSize="17sp" />

                        <RadioButton
                            android:id="@+id/buttonDispo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/pb_dispo"
                            android:textSize="17sp" />


                        <RadioButton
                            android:id="@+id/radioButtonAutre"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/pb_autre"
                            android:textSize="17sp" />


                        <EditText
                            android:id="@+id/editTextAutre"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:inputType="textPersonName"
                            android:hint="Autre problème"
                            android:textSize="15sp" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/buttonEnvoyer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/button_envoyer" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="11"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonRmach1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_retour" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>